force-app/main/default/objects/EY_Lead_Duplicate_Detector_rules__mdt/EY_Lead_Duplicate_Detector_rules__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata is used to find duplicate leads and create a lead enquiry for each duplicate lead.</description>
    <label>EY Lead Duplicate Detector rules</label>
    <pluralLabel>EY Lead Duplicate Detector rules</pluralLabel>
</CustomObject>