force-app/main/default/objects/EY_Lead_Duplicate_Detector_rules__mdt/fields/EYI_Active__c.field-meta.xml
<CustomField>
    <fullName>EYI_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>