force-app/main/default/objects/EY_Lead_Duplicate_Detector_rules__mdt/fields/EYI_Child_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Child_Object_API_Name__c</fullName>
    <description>Please provide the name of the child object for which you want to create a duplicate entry.</description>
    <label>Child Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>