force-app/main/default/objects/EY_Lead_Duplicate_Detector_rules__mdt/fields/EYI_Create_Child_Records__c.field-meta.xml
<CustomField>
    <fullName>EYI_Create_Child_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Child Records?</label>
    <type>Checkbox</type>
</CustomField>