force-app/main/default/objects/EY_Lead_Duplicate_Detector_rules__mdt/fields/EYI_Duplicate_logic__c.field-meta.xml
<CustomField>
    <fullName>EYI_Duplicate_logic__c</fullName>
    <description>Please provide the duplicate logic you want to use to find the duplicate records</description>
    <label>Duplicate logic</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>