force-app/main/default/objects/EY_Lead_Duplicate_Detector_rules__mdt/fields/EYI_Fields_to_detect_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>EYI_Fields_to_detect_Duplicate__c</fullName>
    <description>Please provide the field name that you want to use to find duplicates</description>
    <label>Fields to detect Duplicate</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>