force-app/main/default/objects/EY_Lead_Duplicate_Detector_rules__mdt/fields/EYI_Key_Field__c.field-meta.xml
<CustomField>
    <fullName>EYI_Key_Field__c</fullName>
    <description>Please provide the field names of the duplicate object entries</description>
    <label>Key Field</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>