force-app/main/default/objects/EY_Lead_Duplicate_Detector_rules__mdt/fields/EYI_Lead_Duplicate_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>EYI_Lead_Duplicate_Error_Message__c</fullName>
    <label>Lead Duplicate Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>