force-app/main/default/objects/EY_Lead_Duplicate_Detector_rules__mdt/fields/EYI_Master_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Master_Object_API_Name__c</fullName>
    <description>Please provide the name of the master object for which you want to run the duplicate rule</description>
    <label>Master Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>