force-app/main/default/objects/EY_Lead_Duplicate_Detector_rules__mdt/fields/EYI_Master_Object_Field_to_Update__c.field-meta.xml
<CustomField>
    <fullName>EYI_Master_Object_Field_to_Update__c</fullName>
    <description>Please provide the field names which you want to merge with master object</description>
    <label>Master Object Field to Update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>